Jesus Rivera's change

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
       This is where any content in the footer would go
     </footer>
   </body>
+  <!--Jesús has modified this-->
 </html>
 
  
